2016-02-11 Sabine Elles
	* Update moduel size : set to chip size without outer edges 
	       in order to match the SiDetectorElement surface size 
	* Fix inlined module Z position (based on sensor thickness not on module thickness)
	* Tag as InDetTrackingGeometryXML-00-00-28

2016-02-04 Eric Feng <Eric.Feng@cern.ch>
	* Correcting bug in stereo angle in Strip endcap from [-40, 40] mrad to [-20, 20]:
	  share/FourLayersNoStub_23-25-dev0_SCTEndcap.xml
	* Tagged as InDetTrackingGeometryXML-00-00-27

2016-02-04 Noemi Calace <noemi.calace@cern.ch>
	* Fixing identifiers and module phi position
	* REMEMBER: You need to have InDetTrackingGeometryUtils to make it work
        * tagged as InDetTrackingGeometryXML-00-00-26

2016-02-03 Noemi Calace <noemi.calace@cern.ch>
	* Adding the OverlapDescriptors
	* You need to have InDetTrackingGeometryUtils to make it work
        * tagged as InDetTrackingGeometryXML-00-00-25

2016-01-31 Noemi Calace <noemi.calace@cern.ch>
	* Changing Barrel description for IExtBrl4Ref layout
        * tagged as InDetTrackingGeometryXML-00-00-24

2016-01-29 Noemi Calace <noemi.calace@cern.ch>
	* Adding phi offset for layers
        * tagged as InDetTrackingGeometryXML-00-00-23

2016-01-27 Noemi Calace <noemi.calace@cern.ch>
        * Adding creation of the dictionary folder if it doesn't exist
        * tagged as InDetTrackingGeometryXML-00-00-22

2016-01-26 Noemi Calace <noemi.calace@cern.ch>
        * Fixing memory leak: https://its.cern.ch/jira/browse/ATLPHYSVAL-386
        * Thanks to Robert Harrington and Shaun Roe
        * tagged as InDetTrackingGeometryXML-00-00-21

2016-01-24 Noemi Calace <noemi.calace@cern.ch>
	* Added changes to fix binUtiliy errors for Barrel and Endcaps
	* tagged as InDetTrackingGeometryXML-00-00-20

2016-01-24 Noemi Calace <noemi.calace@cern.ch>
	* Adding FourLayersNoStub_23-25-dev0 layout to match Strip fro GeoModel 
	* with SCT_Version = SCT_SLHC_05 and SLHC_Version = 23-25-dev0