@@ -3,7 +3,7 @@
   <SCTEndcapDisc>
     <Name>Disk0</Name>
     <DiscNumber>0</DiscNumber>
-    <RingPositions>1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 1509.08 1504.919 </RingPositions>
+    <RingPositions>1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 1514.08 1509.919 </RingPositions>
     <RadiusType>Inner</RadiusType>
     <Radius>385.589278 404.639543 428.654048 457.684688 491.192951 509.337113 536.517688 560.694918 577.228570 608.117160 638.730677 670.990225 697.246109 723.449660 757.048556 811.660785 867.628874 907.780160 </Radius>
     <NumberOfSectors>32 32 32 32 32 32 32 32 32 32 64 64 64 64 64 64 64 64 </NumberOfSectors>
@@ -19,7 +19,7 @@
   <SCTEndcapDisc>
     <Name>Disk1</Name>
     <DiscNumber>1</DiscNumber>
-    <RingPositions>1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 1699.08 1694.919 </RingPositions>
+    <RingPositions>1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 1704.08 1699.919 </RingPositions>
     <RadiusType>Inner</RadiusType>
     <Radius>385.589278 404.639543 428.654048 457.684688 491.192951 509.337113 536.517688 560.694918 577.228570 608.117160 638.730677 670.990225 697.246109 723.449660 757.048556 811.660785 867.628874 907.780160 </Radius>
     <NumberOfSectors>32 32 32 32 32 32 32 32 32 32 64 64 64 64 64 64 64 64 </NumberOfSectors>
@@ -35,7 +35,7 @@
   <SCTEndcapDisc>
     <Name>Disk2</Name>
     <DiscNumber>2</DiscNumber>
-    <RingPositions>1949.08 1944.919 1949.08 1944.919 1949.08 1944.919 1949.08 1944.919 1949.08 1944.919 1949.08 1944.919 1949.08 1944.919 1949.08 1944.919 1949.08 1944.919  </RingPositions>
+    <RingPositions>1954.08 1949.919 1954.08 1949.919 1954.08 1949.919 1954.08 1949.919 1954.08 1949.919 1954.08 1949.919 1954.08 1949.919 1954.08 1949.919 1954.08 1949.919  </RingPositions>
     <RadiusType>Inner</RadiusType>
     <Radius>385.589278 404.639543 428.654048 457.684688 491.192951 509.337113 536.517688 560.694918 577.228570 608.117160 638.730677 670.990225 697.246109 723.449660 757.048556 811.660785 867.628874 907.780160 </Radius>
     <NumberOfSectors>32 32 32 32 32 32 32 32 32 32 64 64 64 64 64 64 64 64 </NumberOfSectors>
@@ -51,7 +51,7 @@
   <SCTEndcapDisc>
     <Name>Disk3</Name>
     <DiscNumber>3</DiscNumber>
-    <RingPositions>2249.08 2244.919 2249.08 2244.919 2249.08 2244.919 2249.08 2244.919 2249.08 2244.919 2249.08 2244.919 2249.08 2244.919 2249.08 2244.919 2249.08 2244.919  </RingPositions>
+    <RingPositions>2254.08 2249.919 2254.08 2249.919 2254.08 2249.919 2254.08 2249.919 2254.08 2249.919 2254.08 2249.919 2254.08 2249.919 2254.08 2249.919 2254.08 2249.919  </RingPositions>
     <RadiusType>Inner</RadiusType>
     <Radius>385.589278 404.639543 428.654048 457.684688 491.192951 509.337113 536.517688 560.694918 577.228570 608.117160 638.730677 670.990225 697.246109 723.449660 757.048556 811.660785 867.628874 907.780160 </Radius>
     <NumberOfSectors>32 32 32 32 32 32 32 32 32 32 64 64 64 64 64 64 64 64 </NumberOfSectors>
@@ -67,7 +67,7 @@
   <SCTEndcapDisc>
     <Name>Disk4</Name>
     <DiscNumber>4</DiscNumber>
-    <RingPositions>2599.08 2594.919 2599.08 2594.919 2599.08 2594.919 2599.08 2594.919 2599.08 2594.919 2599.08 2594.919 2599.08 2594.919 2599.08 2594.919 2599.08 2594.919  </RingPositions>
+    <RingPositions>2604.08 2599.919 2604.08 2599.919 2604.08 2599.919 2604.08 2599.919 2604.08 2599.919 2604.08 2599.919 2604.08 2599.919 2604.08 2599.919 2604.08 2599.919  </RingPositions>
     <RadiusType>Inner</RadiusType>
     <Radius>385.589278 404.639543 428.654048 457.684688 491.192951 509.337113 536.517688 560.694918 577.228570 608.117160 638.730677 670.990225 697.246109 723.449660 757.048556 811.660785 867.628874 907.780160 </Radius>
     <NumberOfSectors>32 32 32 32 32 32 32 32 32 32 64 64 64 64 64 64 64 64 </NumberOfSectors>
@@ -83,7 +83,7 @@
   <SCTEndcapDisc>
     <Name>Disk5</Name>
     <DiscNumber>5</DiscNumber>
-    <RingPositions>2999.08 2994.919 2999.08 2994.919 2999.08 2994.919 2999.08 2994.919 2999.08 2994.919 2999.08 2994.919 2999.08 2994.919 2999.08 2994.919 2999.08 2994.919  </RingPositions>
+    <RingPositions>3002.08 2997.919 3002.08 2997.919 3002.08 2997.919 3002.08 2997.919 3002.08 2997.919 3002.08 2997.919 3002.08 2997.919 3002.08 2997.919 3002.08 2997.919  </RingPositions>
     <RadiusType>Inner</RadiusType>
     <Radius>385.589278 404.639543 428.654048 457.684688 491.192951 509.337113 536.517688 560.694918 577.228570 608.117160 638.730677 670.990225 697.246109 723.449660 757.048556 811.660785 867.628874 907.780160 </Radius>
     <NumberOfSectors>32 32 32 32 32 32 32 32 32 32 64 64 64 64 64 64 64 64 </NumberOfSectors>
