@@ -6,7 +6,7 @@
     <Layer> 0</Layer>
     <NBarrelModules>4.5</NBarrelModules>
     <BarrelModuleType>DoubleLength_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 197.8 234.1 285.8 322.8 359.7 403.1 454.0 513.9 584.2 638.4 696.4 760.9 832.4 911.9 1000.2 1098.1 1206.9 </MountainPosOnStavePlane>
@@ -22,7 +22,7 @@
     <Layer> 0</Layer>
     <NBarrelModules>4.5</NBarrelModules>
     <BarrelModuleType>DoubleLength_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 193.8 230.1 281.8 318.8 355.7 399.1 450.0 509.9 580.2 634.4 692.4 756.9 828.4 907.9 996.2 1094.1 1202.9 </MountainPosOnStavePlane>
@@ -38,7 +38,7 @@
     <Layer> 1</Layer>
     <NBarrelModules>5</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 214.4 240.7 272.2 309.9 355.1 409.2 473.9 551.5 599.9 646.5 697.3 752.7 813.0 878.8 950.5 1028.6 1113.7 1206.5 </MountainPosOnStavePlane>
@@ -54,7 +54,7 @@
     <Layer> 1</Layer>
     <NBarrelModules>5</NBarrelModules>
     <BarrelModuleType>FourChip_RD53 </BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 210.4 236.7 268.2 305.9 351.1 405.2 469.9 547.5 595.9 642.5 693.3 748.7 809.0 874.8 946.5 1024.6 1109.7 1202.5 </MountainPosOnStavePlane>
