@@ -6,7 +6,7 @@
     <Layer> 0</Layer>
     <NBarrelModules>4.5</NBarrelModules>
     <BarrelModuleType>DoubleLength_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 197.8 234.1 285.8 322.8 359.7 403.1 454.0 513.9 584.2 638.4 696.4 760.9 832.4 911.9 1000.2 1098.1 1206.9 </MountainPosOnStavePlane>
@@ -22,7 +22,7 @@
     <Layer> 0</Layer>
     <NBarrelModules>4.5</NBarrelModules>
     <BarrelModuleType>DoubleLength_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 193.8 230.1 281.8 318.8 355.7 399.1 450.0 509.9 580.2 634.4 692.4 756.9 828.4 907.9 996.2 1094.1 1202.9 </MountainPosOnStavePlane>
@@ -38,7 +38,7 @@
     <Layer> 1</Layer>
     <NBarrelModules>5</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 214.4 240.7 272.2 309.9 355.1 409.2 473.9 551.5 599.9 646.5 697.3 752.7 813.0 878.8 950.5 1028.6 1113.7 1206.5 </MountainPosOnStavePlane>
@@ -54,7 +54,7 @@
     <Layer> 1</Layer>
     <NBarrelModules>5</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 210.4 236.7 268.2 305.9 351.1 405.2 469.9 547.5 595.9 642.5 693.3 748.7 809.0 874.8 946.5 1024.6 1109.7 1202.5 </MountainPosOnStavePlane>
@@ -70,7 +70,7 @@
     <Layer> 2</Layer>
     <NBarrelModules>6</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 254.1 275.9 300.0 326.4 355.4 387.3 422.4 461.0 503.4 550.0 601.3 657.6 719.6 </MountainPosOnStavePlane>
@@ -86,7 +86,7 @@
     <Layer> 2</Layer>
     <NBarrelModules>6</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 250.1 271.9 296.0 322.4 351.4 383.3 418.4 457.0 499.4 546.0 597.3 653.6 715.6 </MountainPosOnStavePlane>
@@ -102,7 +102,7 @@
     <Layer> 3</Layer>
     <NBarrelModules>7</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 295.7 318.6 343.2 369.7 398.1 428.8 461.8 497.2 535.4 576.5 620.7 668.3 719.5 </MountainPosOnStavePlane>
@@ -118,7 +118,7 @@
     <Layer> 3</Layer>
     <NBarrelModules>7</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 291.7 314.6 339.2 365.7 394.1 424.8 457.8 493.2 531.4 572.5 616.7 664.3 715.5 </MountainPosOnStavePlane>
@@ -134,7 +134,7 @@
     <Layer> 4</Layer>
     <NBarrelModules>8</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 336.7 359.5 383.5 409.1 436.1 464.8 495.1 527.3 561.4 597.5 635.8 676.4 719.4 </MountainPosOnStavePlane>
@@ -150,7 +150,7 @@
     <Layer> 4</Layer>
     <NBarrelModules>8</NBarrelModules>
     <BarrelModuleType>FourChip_RD53</BarrelModuleType>
-    <BarrelModuleTilt> 0.096 </BarrelModuleTilt>
+    <BarrelModuleTilt> -0.24435 </BarrelModuleTilt>
     <BarrelModuleGap> 0.2</BarrelModuleGap>
     <BarrelModuleRShift>0</BarrelModuleRShift>
     <MountainPosOnStavePlane> 332.7 355.5 379.5 405.1 432.1 460.8 491.1 523.3 557.4 593.5 631.8 672.4 715.4 </MountainPosOnStavePlane>
